--- a/robotron_2000/index.html
+++ b/robotron_2000/index.html
@@ -52,45 +52,45 @@
                     <div class="peca">
                         <label for="" class="peca-titulo">Braços</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" id="subtract">-</buttom>
-                            <input type="text" class="controle-contador" value="00" id="arm">
-                            <buttom class="controle-ajuste" id="sum">+</buttom>
+                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <input type="text" class="controle-contador" value="00" data-count>
+                            <buttom class="controle-ajuste" data-control="+">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Blindagem</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste">-</buttom>
-                            <input type="text" class="controle-contador" value="00">
-                            <buttom class="controle-ajuste">+</buttom>
+                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <input type="text" class="controle-contador" value="00" data-count>
+                            <buttom class="controle-ajuste" data-control="+">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Núcleos</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste">-</buttom>
-                            <input type="text" class="controle-contador" value="00">
-                            <buttom class="controle-ajuste">+</buttom>
+                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <input type="text" class="controle-contador" value="00" data-count>
+                            <buttom class="controle-ajuste" data-control="+">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Pernas</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste">-</buttom>
-                            <input type="text" class="controle-contador" value="00">
-                            <buttom class="controle-ajuste">+</buttom>
+                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <input type="text" class="controle-contador" value="00" data-count>
+                            <buttom class="controle-ajuste" data-control="+">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Foguetes</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste">-</buttom>
-                            <input type="text" class="controle-contador" value="00">
-                            <buttom class="controle-ajuste">+</buttom>
+                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <input type="text" class="controle-contador" value="00" data-count>
+                            <buttom class="controle-ajuste" data-control="+">+</buttom>
                         </div>
                     </div>
                 </div>
