--- a/robotron_2000/index.html
+++ b/robotron_2000/index.html
@@ -23,25 +23,25 @@
             <div class="estatistica">
                 <p class="estatistica-titulo">Força</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">768</p>
+                    <p class="estatistica-numero" data-statistics="strength">768</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Poder</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">630</p>
+                    <p class="estatistica-numero" data-statistics="power">630</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Energia</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">289</p>
+                    <p class="estatistica-numero" data-statistics="energy">289</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Velocidade</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">597</p>
+                    <p class="estatistica-numero" data-statistics="speed">597</p>
                 </div>
             </div>
         </section>
@@ -52,45 +52,45 @@
                     <div class="peca">
                         <label for="" class="peca-titulo">Braços</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <buttom class="controle-ajuste" data-control="-" data-peca="arms">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-count>
-                            <buttom class="controle-ajuste" data-control="+">+</buttom>
+                            <buttom class="controle-ajuste" data-control="+" data-peca="arms">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Blindagem</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <buttom class="controle-ajuste" data-control="-" data-peca="armor">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-count>
-                            <buttom class="controle-ajuste" data-control="+">+</buttom>
+                            <buttom class="controle-ajuste" data-control="+" data-peca="armor">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Núcleos</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <buttom class="controle-ajuste" data-control="-" data-peca="nucleos">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-count>
-                            <buttom class="controle-ajuste" data-control="+">+</buttom>
+                            <buttom class="controle-ajuste" data-control="+" data-peca="nucleos">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Pernas</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <buttom class="controle-ajuste" data-control="-" data-peca="legs">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-count>
-                            <buttom class="controle-ajuste" data-control="+">+</buttom>
+                            <buttom class="controle-ajuste" data-control="+" data-peca="legs">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Foguetes</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-control="-">-</buttom>
+                            <buttom class="controle-ajuste" data-control="-" data-peca="rockets">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-count>
-                            <buttom class="controle-ajuste" data-control="+">+</buttom>
+                            <buttom class="controle-ajuste" data-control="+" data-peca="rockets">+</buttom>
                         </div>
                     </div>
                 </div>
