--- a/javascript/mochila_de_viagem/index.html
+++ b/javascript/mochila_de_viagem/index.html
@@ -24,7 +24,7 @@
             </form>
         </div>
         
-        <ul class="lista">
+        <ul id="lista">
             <li class="item"><strong>7</strong>Camisas</li>
             <li class="item"><strong>1</strong>Calça</li>
             <li class="item"><strong>3</strong>Casaco</li>
